Add comprehensive tests for SEA DSL functionality and TypeScript integration
- Implement unit tests for Resource and Entity classes in Rust.
- Add WASM tests for Entity, Resource, Flow, Instance, and Graph functionalities.
- Create Python integration tests for SEA DSL, covering graph creation, entity/resource management, and flow validation.
- Develop TypeScript tests for advanced features, including instance attributes and flow management.
- Introduce a TypeScript configuration file and Vitest setup for testing.
- Ensure proper error handling and validation in tests for invalid references and UUIDs.
- Enhance parser tests for various DSL scenarios, including complex graphs and error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,72 @@
+# Temporary files
 tmp/
 tmp/*
+
+# Node.js / TypeScript
+node_modules/
+dist/
+build/
+*.node
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# napi / native module build outputs
+sea-core/target/
+target/
+**/target/
+*.so
+*.dylib
+*.dll
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+htmlcov/
+.coverage
+coverage.xml
+dist/
+build/
+eggs/
+*.egg-info/
+.maturin/
+venv/
+.venv/
+env/
+.env
+pip-wheel-metadata/
+target-wheels/
+wheels/
+*.whl
+
+# WASM build outputs (wasm-pack)
+pkg/*.wasm
+pkg/*.wasm.gz
+pkg/*.wasm.map
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Temporary / cache
+.cache/
+npm-debug.log*
+
+# Misc
+coverage/
+.pytest_cache/
+
