--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -10,13 +10,14 @@ homepage = "https://github.com/GodSpeedAI/DomainForge"
 repository = "https://github.com/GodSpeedAI/DomainForge"
 
 [dependencies]
-uuid = { version = "1.6", features = ["v4", "v7", "serde", "wasm-bindgen"] }
+uuid = { version = "1.6", features = ["v4", "v5", "v7", "serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rust_decimal = { version = "1.33", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 pest = "2.7"
 pest_derive = "2.7"
+indexmap = { version = "2.0", features = ["serde"] }
 pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
 pythonize = { version = "0.22", optional = true }
 napi = { version = "2.16", features = ["async"], optional = true }
