Refactor integration tests for primitives in sea-core
- Updated import order and formatting in `primitives_integration_tests.rs`.
- Added new tests for RDF/XML typed literals in `rdf_xml_typed_literal_tests.rs`.
- Refactored resource tests to improve clarity in `resource_tests.rs`.
- Adjusted unit tests for resources in `resource_unit_tests.rs`.
- Introduced SBVR fact schema tests in `sbvr_fact_schema_tests.rs`.
- Added tests for SBVR flow facts in `sbvr_flow_facts_tests.rs`.
- Implemented turtle entity export tests in `turtle_entity_export_tests.rs`.
- Created turtle escaping tests in `turtle_escaping_tests.rs`.
- Added turtle resource export tests in `turtle_resource_export_tests.rs`.
- Enhanced unicode validation tests in `unicode_validation_tests.rs`.
- Updated unit tests for units in `unit_tests.rs`.
- Refactored WASM tests for better structure in `wasm_tests.rs`.

--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -1,38 +1,34 @@
-# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 language: en-US
-tone_instructions: "Generate AI-executable fix instructions: Specify exact locations, describe the problem mechanically, provide step-by-step implementation. No ambiguity—your output becomes another agent's input. Be concise and focus on critical issues only"
+tone_instructions: "Generate concise, actionable, and unambiguous fix instructions. Specify exact file paths and edits; focus on mechanical details required for automated or manual application. Focus on critical issues only."
 reviews:
-  # ... other review settings
-  path_filters:
-    # Exclude top-level directories except docs/
-    - "!.github/**"
-    - "!.git/**"
-    - "!.pytest_cache/**"
-    - "!.venv/**"
-    - "!__pycache__/**"
-    - "!context/**"
-    - "!examples/**"
-    - "!node_modules/**"
-    - "!pkg/**"
-    - "!python/**"
-    - "!scripts/**"
-    - "!sea-core/**"
-    - "!tests/**"
-    - "!tmp/**"
-    - "!typescript-tests/**"
-    - "!docs/diagrams/**"
-    - "!docs/explanations/**"
-    - "!docs/howtos/**"
-    - "!docs/implementation/**"
-    - "!docs/plans/Phase*.md"
-    - "!docs/plans/PLAN_TEMPLATE.md"
-    - "!docs/plans/INDEX.md"
-    - "!docs/plans/Phases_*.md"
-    - "!docs/reference/**"
-    - "!docs/specs/**"
-    - "!docs/tutorials/**"
-    - "!docs/work_summaries/**"
-    - "!docs/*.md"
-
-    # Include only markdown files in docs/plans/tmp/ (recursive)
-    - "docs/plans/tmp/**/*.md"
+  profile: assertive
+  commit_status: true
+  fail_commit_status: true
+  auto_review:
+    enabled: true
+    drafts: false
+    branches:
+      - main
+      - dev
+      - release/*
+  tools:
+    # Rust tooling
+    clippy:
+      enabled: true
+      config_file: sea-core/Cargo.toml
+    rustfmt:
+      enabled: true
+      config_file: .rustfmt.toml
+    # Python tooling
+    ruff:
+      enabled: true
+      config_file: pyproject.toml
+knowledge_base:
+  code_guidelines:
+    enabled: true
+    filePatterns:
+      - "docs/**/*.md"
+      - "sea-core/**/*.rs"
+      - "sea-core/**/*.py"
+      - "tests/**/*.rs"
+      - "tests/**/*.py"
