--- a/sea-core/deny.toml
+++ b/sea-core/deny.toml
@@ -28,4 +28,4 @@ wildcards = "warn"
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
-allow-registry = ["https://github.com/rust-lang/crates.io-index"]
+allow-registry = ["crates-io"]
