--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.target }}
-          path: sea-core/target/wheels/*.whl
+          path: target/wheels/*.whl
 
   create-release:
     name: Create GitHub Release
