Refactor and improve error handling across various modules
- Moved wasm_bindgen_test imports into the feature-gated module in wasm_tests.rs to avoid masking unused imports.
- Updated serialization methods in graph.rs to return Result instead of swallowing errors with JsValue::NULL.
- Corrected artifact upload path in release.yml to match the working directory.
- Added missing imports and improved error handling in various test files.
- Refactored tests to remove redundancy and improve clarity.
- Enhanced error propagation in quantity parsing and other functions to avoid silent failures.
- Implemented proper URI encoding and escaping in kg.rs to prevent collisions and ensure compliance with standards.
- Added unit tests for edge cases in RDF export and URI handling.
- Cleaned up documentation comments for clarity and accuracy.

--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -11,16 +11,14 @@ reviews:
       - main
       - dev
       - release/*
-    tools:
-      # Rust tooling
-      clippy:
-        enabled: true
-        config_file: sea-core/Cargo.toml
-      # Python tooling
-      ruff:
-        enabled: true
-        config_file: pyproject.toml
-  # Request changes workflow
+  # Tools configuration
+  tools:
+    # Rust tooling
+    clippy:
+      enabled: true
+    # Python tooling
+    ruff:
+      enabled: true
   request_changes_workflow: true
   high_level_summary: true
   poem: false
