Fix critical issues and improve code quality in CodeRabbit
- Enhanced Windows shell compatibility in CI workflows
- Added missing UUID import to resolve compilation errors
- Addressed precision loss in Decimal to f64 conversions
- Improved error handling in Python flow quantity getter
- Corrected TypeScript handling of negative and positive infinity
- Fixed JSON escaping issues in parser functions
- Refactored UUID parsing helpers in Python and TypeScript
- Removed redundant Clippy attributes across multiple files
- Deleted obsolete backup config file and updated .gitignore

Deferred tasks identified for future improvements include test assertion enhancements, units API changes, and WASM refactoring.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,15 +33,19 @@ jobs:
         run: cargo build --release --target ${{ matrix.target }}
         working-directory: sea-core
 
-      - name: Package artifacts
+      - name: Package artifacts (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          cd sea-core/target/${{ matrix.target }}/release
+          7z a ../../../../sea-core-${{ matrix.target }}.zip sea_core.exe
+
+      - name: Package artifacts (Unix)
+        if: matrix.os != 'windows-latest'
         shell: bash
         run: |
           cd sea-core/target/${{ matrix.target }}/release
-          if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            7z a ../../../../sea-core-${{ matrix.target }}.zip sea_core.exe
-          else
-            tar czf ../../../../sea-core-${{ matrix.target }}.tar.gz sea_core
-          fi
+          tar czf ../../../../sea-core-${{ matrix.target }}.tar.gz sea_core
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
