--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/GodSpeedAI/DomainForge"
 repository = "https://github.com/GodSpeedAI/DomainForge"
 
 [dependencies]
-uuid = { version = "1.6", features = ["v4", "v5", "v7", "serde"] }
+uuid = { version = "1.6", features = ["v4", "v5", "v7", "serde", "rng-getrandom"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rust_decimal = { version = "1.33", features = ["serde"] }
