--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,9 +110,8 @@ jobs:
 
       - name: Build Python bindings
         run: |
-          source ../.venv/bin/activate
-          maturin develop --features python
-        working-directory: sea-core
+          source .venv/bin/activate
+          maturin develop
 
       - name: Run Python tests
         run: |
