--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -27,6 +27,9 @@ wasm-bindgen = { version = "0.2", optional = true }
 serde-wasm-bindgen = { version = "0.6", optional = true }
 percent-encoding = "2.3.2"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.3", features = ["wasm_js"] }
+
 [dev-dependencies]
 proptest = "1.0"
 wasm-bindgen-test = "0.3"
