feat: Implement KG import functionality with Turtle and RDF/XML support
- Added `import_kg_turtle` and `import_kg_rdfxml` functions to handle importing knowledge graphs from Turtle and RDF/XML formats.
- Implemented SHACL validation during the import process to ensure data integrity.
- Introduced `augment_shapes_from_store` to extract SHACL shapes from the store if not present in the Turtle representation.
- Enhanced SBVR model with priority handling for business rules.
- Added tests for CLI import functionality for SBVR and KG formats, including validation checks for SHACL compliance.
- Created round-trip tests for SBVR and KG to ensure correct serialization and deserialization.
- Updated RDF/XML handling to correctly parse typed literals and namespaces.

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -26,6 +26,9 @@ napi-derive = { version = "2.16", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 serde-wasm-bindgen = { version = "0.6", optional = true }
 percent-encoding = "2.3.2"
+roxmltree = "0.21.1"
+oxigraph = { version = "0.3", optional = true }
+
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
@@ -35,6 +38,9 @@ proptest = "1.0"
 wasm-bindgen-test = "0.3"
 jsonschema = "0.18"
 roxmltree = "0.21.1"
+assert_cmd = "2.0"
+tempfile = "3.6"
+predicates = "3.1"
 rust_decimal_macros = "1.33"
 
 [build-dependencies]
@@ -50,6 +56,7 @@ default = []
 python = ["pyo3", "pythonize"]
 typescript = ["napi", "napi-derive"]
 wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
+shacl = ["oxigraph"]
 
 [profile.release]
 opt-level = "z"
