Refactor tests to reduce duplication and improve clarity
- Extracted common setup code into a helper function `setup_minimal_graph` in `projection_contracts_tests.rs` to streamline test cases.
- Updated various test cases to utilize the new helper function, ensuring consistency and reducing code duplication.
- Enhanced assertions in round-trip tests to validate data integrity after exporting and importing graphs.
- Improved readability by formatting multi-line resource and entity initializations across multiple test files.
- Added robust error handling and validation checks in several test cases to ensure accurate testing outcomes.

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -58,9 +58,7 @@ typescript = ["napi", "napi-derive"]
 wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
 shacl = ["oxigraph"]
 
-[profile.release]
-opt-level = "z"
-lto = true
-codegen-units = 1
-strip = true
-panic = 'abort'
+## NOTE: Profiles are managed at the workspace root (Cargo.toml). Please
+## update the workspace-level profiles in /Cargo.toml rather than in
+## this crate's Cargo.toml. This avoids the "profiles for the non root
+## package will be ignored" cargo warning.
