--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
   CARGO_INCREMENTAL: 0
   MATURIN_VERSION: 1.7.4
   PYTEST_VERSION: 7.4.2
-  CACHE_VERSION: v2  # Increment to bust all caches
+  CACHE_VERSION: v2 # Increment to bust all caches
 
 jobs:
   lint:
@@ -61,13 +61,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -81,8 +89,78 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-
 
-      - name: Run tests
-        run: cargo test --verbose --workspace
+      - name: Run unit tests
+        run: cargo test --verbose --workspace --features cli
+
+      - name: Build release CLI binary (verify)
+        run: |
+          cd sea-core
+          cargo build --release --target ${{ matrix.target }} --features cli
+
+      - name: Run CLI binary (--version) to verify runtime (non-windows)
+        if: matrix.os != 'windows-latest'
+        run: |
+          BIN_DIR="sea-core/target/${{ matrix.target }}/release"
+          if [ ! -f "$BIN_DIR/sea" ] && [ -f "sea-core/target/release/sea" ]; then BIN_DIR="sea-core/target/release"; fi
+          if [ ! -f "$BIN_DIR/sea" ] && [ -f "target/release/sea" ]; then BIN_DIR="target/release"; fi
+          echo "Using binary dir: $BIN_DIR"
+          export LD_LIBRARY_PATH="$BIN_DIR:$LD_LIBRARY_PATH"
+          export DYLD_LIBRARY_PATH="$BIN_DIR:$DYLD_LIBRARY_PATH"
+          "$BIN_DIR/sea" --version || (echo "::error::Failed to run CLI binary"; ls -la "$BIN_DIR"; exit 1)
+
+      - name: Check CLI binary size (non-windows)
+        if: matrix.os != 'windows-latest'
+        run: |
+          BIN_DIR="sea-core/target/${{ matrix.target }}/release"
+          if [ ! -f "$BIN_DIR/sea" ] && [ -f "sea-core/target/release/sea" ]; then BIN_DIR="sea-core/target/release"; fi
+          if [ ! -f "$BIN_DIR/sea" ] && [ -f "target/release/sea" ]; then BIN_DIR="target/release"; fi
+          SIZE=$(stat -c%s "$BIN_DIR/sea")
+          echo "CLI binary size: $SIZE bytes"
+          if [ "$SIZE" -gt 52428800 ]; then
+            echo "::error::CLI binary exceeds 50MB ($SIZE bytes)";
+            exit 1
+          fi
+
+      - name: Run CLI binary (--version) to verify runtime (windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          $binDir = "sea-core/target/${{ matrix.target }}/release"
+          if (-not (Test-Path "$binDir/sea.exe")) { $binDir = "sea-core/target/release" }
+          Write-Host "Using binary dir: $binDir"
+          $env:PATH = "$binDir;$env:PATH"
+          & "$binDir/sea.exe" --version
+
+      - name: Check CLI binary size (windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          $binDir = "sea-core/target/${{ matrix.target }}/release"
+          if (-not (Test-Path "$binDir/sea.exe")) { $binDir = "sea-core/target/release" }
+          $size = (Get-Item "$binDir/sea.exe").Length
+          Write-Host "CLI binary size: $size bytes"
+          if ($size -gt 52428800) { Write-Error "CLI binary exceeds 50MB ($size)"; exit 1 }
+
+      - name: Verify CLI binary exists (non-windows)
+        if: matrix.os != 'windows-latest'
+        run: |
+          BIN=sea
+          if [ -f "sea-core/target/${{ matrix.target }}/release/$BIN" ] || [ -f "sea-core/target/release/$BIN" ]; then
+            echo "Found $BIN"
+          else
+            echo "::error::CLI binary not found"
+            ls -la sea-core/target || true
+            exit 1
+          fi
+
+      - name: Verify CLI binary exists (windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          $paths = @("sea-core/target/${{ matrix.target }}/release/sea.exe", "sea-core/target/release/sea.exe", "target/release/sea.exe")
+          $found = $false
+          foreach ($p in $paths) { if (Test-Path $p -PathType Leaf) { Write-Host "Found $p"; $found=$true; break } }
+          if (-not $found) { Write-Error "CLI binary not found at $($paths -join ', ')"; exit 1 }
 
   test-python:
     name: Test Python (${{ matrix.python-version }})
