--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,24 +97,37 @@ jobs:
           cd sea-core
           cargo build --release --target ${{ matrix.target }} --features cli
 
+      - name: Resolve CLI binary path
+        if: matrix.os != 'windows-latest'
+        run: |
+          CLI_BIN=$(python3 scripts/resolve_rust_binary.py --workspace "$(pwd)" --name sea --profile release --target-triple ${{ matrix.target }} --require-executable)
+          echo "Resolved CLI binary: $CLI_BIN"
+          echo "CLI_BIN=$CLI_BIN" >> "$GITHUB_ENV"
+          echo "CLI_BIN_DIR=$(dirname "$CLI_BIN")" >> "$GITHUB_ENV"
+
+      - name: Resolve CLI binary path (windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          $workspace = (Get-Location).Path
+          $cliBin = python scripts/resolve_rust_binary.py --workspace "$workspace" --name sea --profile release --target-triple ${{ matrix.target }} --require-executable
+          Write-Host "Resolved CLI binary: $cliBin"
+          "CLI_BIN=$cliBin" >> $env:GITHUB_ENV
+          $cliDir = Split-Path -Parent $cliBin
+          "CLI_BIN_DIR=$cliDir" >> $env:GITHUB_ENV
+
       - name: Run CLI binary (--version) to verify runtime (non-windows)
         if: matrix.os != 'windows-latest'
         run: |
-          BIN_DIR="sea-core/target/${{ matrix.target }}/release"
-          if [ ! -f "$BIN_DIR/sea" ] && [ -f "sea-core/target/release/sea" ]; then BIN_DIR="sea-core/target/release"; fi
-          if [ ! -f "$BIN_DIR/sea" ] && [ -f "target/release/sea" ]; then BIN_DIR="target/release"; fi
-          echo "Using binary dir: $BIN_DIR"
-          export LD_LIBRARY_PATH="$BIN_DIR:$LD_LIBRARY_PATH"
-          export DYLD_LIBRARY_PATH="$BIN_DIR:$DYLD_LIBRARY_PATH"
-          "$BIN_DIR/sea" --version || (echo "::error::Failed to run CLI binary"; ls -la "$BIN_DIR"; exit 1)
+          echo "Using CLI binary: $CLI_BIN"
+          export LD_LIBRARY_PATH="$CLI_BIN_DIR:$LD_LIBRARY_PATH"
+          export DYLD_LIBRARY_PATH="$CLI_BIN_DIR:$DYLD_LIBRARY_PATH"
+          "$CLI_BIN" --version || (echo "::error::Failed to run CLI binary"; ls -la "$CLI_BIN_DIR"; exit 1)
 
       - name: Check CLI binary size (non-windows)
         if: matrix.os != 'windows-latest'
         run: |
-          BIN_DIR="sea-core/target/${{ matrix.target }}/release"
-          if [ ! -f "$BIN_DIR/sea" ] && [ -f "sea-core/target/release/sea" ]; then BIN_DIR="sea-core/target/release"; fi
-          if [ ! -f "$BIN_DIR/sea" ] && [ -f "target/release/sea" ]; then BIN_DIR="target/release"; fi
-          SIZE=$(stat -c%s "$BIN_DIR/sea")
+          SIZE=$(python3 -c 'import os; print(os.path.getsize(os.environ["CLI_BIN"]))')
           echo "CLI binary size: $SIZE bytes"
           if [ "$SIZE" -gt 52428800 ]; then
             echo "::error::CLI binary exceeds 50MB ($SIZE bytes)";
@@ -125,31 +138,26 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          $binDir = "sea-core/target/${{ matrix.target }}/release"
-          if (-not (Test-Path "$binDir/sea.exe")) { $binDir = "sea-core/target/release" }
-          Write-Host "Using binary dir: $binDir"
+          Write-Host "Using CLI binary: $env:CLI_BIN"
+          $binDir = $env:CLI_BIN_DIR
           $env:PATH = "$binDir;$env:PATH"
-          & "$binDir/sea.exe" --version
+          & "$env:CLI_BIN" --version
 
       - name: Check CLI binary size (windows)
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          $binDir = "sea-core/target/${{ matrix.target }}/release"
-          if (-not (Test-Path "$binDir/sea.exe")) { $binDir = "sea-core/target/release" }
-          $size = (Get-Item "$binDir/sea.exe").Length
+          $size = (Get-Item "$env:CLI_BIN").Length
           Write-Host "CLI binary size: $size bytes"
           if ($size -gt 52428800) { Write-Error "CLI binary exceeds 50MB ($size)"; exit 1 }
 
       - name: Verify CLI binary exists (non-windows)
         if: matrix.os != 'windows-latest'
         run: |
-          BIN=sea
-          if [ -f "sea-core/target/${{ matrix.target }}/release/$BIN" ] || [ -f "sea-core/target/release/$BIN" ]; then
-            echo "Found $BIN"
+          if [ -f "$CLI_BIN" ]; then
+            echo "Verified CLI binary at $CLI_BIN"
           else
-            echo "::error::CLI binary not found"
-            ls -la sea-core/target || true
+            echo "::error::CLI binary not found at $CLI_BIN"
             exit 1
           fi
 
@@ -157,10 +165,12 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          $paths = @("sea-core/target/${{ matrix.target }}/release/sea.exe", "sea-core/target/release/sea.exe", "target/release/sea.exe")
-          $found = $false
-          foreach ($p in $paths) { if (Test-Path $p -PathType Leaf) { Write-Host "Found $p"; $found=$true; break } }
-          if (-not $found) { Write-Error "CLI binary not found at $($paths -join ', ')"; exit 1 }
+          if (Test-Path $env:CLI_BIN -PathType Leaf) {
+            Write-Host "Verified CLI binary at $env:CLI_BIN"
+          } else {
+            Write-Error "CLI binary not found at expected path: $env:CLI_BIN"
+            exit 1
+          }
 
   test-python:
     name: Test Python (${{ matrix.python-version }})
