--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -68,3 +68,6 @@ cli = []
 name = "sea"
 path = "src/bin/sea.rs"
 required-features = ["cli"]
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
