--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -19,6 +19,9 @@ pest = "2.7"
 pest_derive = "2.7"
 indexmap = { version = "2.0", features = ["serde"] }
 log = "0.4.21"
+globset = "0.4"
+globwalk = "0.9"
+toml = { version = "0.8", features = ["parse"] }
 pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
 pythonize = { version = "0.24", optional = true }
 napi = { version = "2.16", features = ["async"], optional = true }
@@ -36,6 +39,7 @@ wasm-bindgen-test = "0.3"
 jsonschema = "0.18"
 roxmltree = "0.21.1"
 rust_decimal_macros = "1.33"
+tempfile = "3.12"
 
 [build-dependencies]
 napi-build = "2.1"
