feat: Enhance NamespaceRegistry with longest literal prefix precedence
- Added `literal_prefix_len` to `CompiledRule` to track the length of the literal prefix in patterns.
- Updated `namespace_for` method to prioritize matches based on the longest literal prefix.
- Implemented tie-breaking logic for namespaces with equal prefix lengths based on alphabetical order.
- Introduced tests to validate the new precedence rules for namespace resolution.
- Added TypeScript bindings for the updated NamespaceRegistry functionality.
- Created new CLI tests to ensure proper validation and resolution of namespaces.
- Refactored existing tests for consistency and clarity.

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -40,6 +40,8 @@ jsonschema = "0.18"
 roxmltree = "0.21.1"
 rust_decimal_macros = "1.33"
 tempfile = "3.12"
+assert_cmd = "2.0"
+predicates = "3"
 
 [build-dependencies]
 napi-build = "2.1"
