perf: introduce tri-state logic performance benchmarks, micro-benchmarks, and results documentation.

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -74,5 +74,9 @@ name = "sea"
 path = "src/bin/sea.rs"
 required-features = ["cli"]
 
+[[bench]]
+name = "null_overhead"
+harness = false
+
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
