fix: disable wasm-opt to fix build failure, rely on increased size limit

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -74,4 +74,7 @@ name = "sea"
 path = "src/bin/sea.rs"
 required-features = ["cli"]
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 
