--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -45,6 +45,7 @@ rust_decimal_macros = "1.33"
 tempfile = "3.12"
 assert_cmd = "2.0"
 predicates = "3"
+criterion = { version = "0.4" }
 
 [build-dependencies]
 napi-build = "2.1"
@@ -60,7 +61,7 @@ python = ["pyo3", "pythonize"]
 typescript = ["napi", "napi-derive"]
 wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
 shacl = ["oxigraph"]
-cli = []
+cli = ["three_valued_logic"]
 three_valued_logic = []
 
 ## NOTE: Profiles are managed at the workspace root (Cargo.toml). Please
@@ -75,3 +76,5 @@ required-features = ["cli"]
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
+
+
